# pytest-cli-fixtures

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yaml
example/: conftest.py  test_something.py
src/pytest_cli_fixtures/: __about__.py  __init__.py  hooks.py  plugin.py
test/: conftest.py  test_fixture_not_required.py  test_fixture_required.py
test/example/: conftest.py  test_test.py
